--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<!-- CHANGE THIS LOGO TO NFCUK LOGO-->
-		<link rel="icon" type="image/jpg" href="./src/assets/NFC_Logo.jpg" />
+		<link rel="icon" type="image/jpg" href="/assets/NFC_Logo.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>NFCCUK</title>
 	</head>
